--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,11 +47,13 @@ jobs:
           echo "ENV=${{ github.event.inputs.ENV }}" >> $GITHUB_ENV
           if [ "${{ github.event.inputs.ENV }}" = "PROD" ]; then
             echo "NODE_ENV=production" >> $GITHUB_ENV
+            echo "DEPLOY_FILE=deployment/prod/deploy.yml" >> $GITHUB_ENV
             echo "DATABASE_NAME=${{ secrets.DATABASE_NAME_PROD }}" >> $GITHUB_ENV
             echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME_PROD }}" >> $GITHUB_ENV
             echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD_PROD }}" >> $GITHUB_ENV
           else
             echo "NODE_ENV=development" >> $GITHUB_ENV
+            echo "DEPLOY_FILE=deployment/dev/deploy.yml" >> $GITHUB_ENV
             echo "DATABASE_NAME=${{ secrets.DATABASE_NAME_DEV }}" >> $GITHUB_ENV
             echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME_DEV }}" >> $GITHUB_ENV
             echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD_DEV }}" >> $GITHUB_ENV
@@ -60,7 +62,7 @@ jobs:
       - name: Copy Docker Compose file to EC2
         uses: appleboy/scp-action@v0.1.1
         with:
-          source: "./docker-compose.yml"
+          source: ${{ env.DEPLOY_FILE }}
           target: "/home/${{ secrets.AWS_SSH_USER }}/docker-compose.yml"
           host: ${{ secrets.AWS_SSH_HOST }}
           username: ${{ secrets.AWS_SSH_USER }}
