feat: fixed routes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.3
         with:
           source: ${{ env.DEPLOY_FILE }}
-          target: "/home/${{ secrets.AWS_SSH_USER }}/docker-compose.yml"
+          target: "/home/${{ secrets.AWS_SSH_USER }}/deploy"
           host: ${{ secrets.AWS_SSH_HOST }}
           username: ${{ secrets.AWS_SSH_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
@@ -86,8 +86,8 @@ jobs:
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /home/${{ secrets.AWS_SSH_USER }}
-            docker-compose -f docker-compose.yml up -d
+            cd /home/${{ secrets.AWS_SSH_USER }}/deploy/deployment/${{env.NODE_ENV}}/
+            docker-compose -f deploy.yml up -d
         env:
           STRAPI_APP: ${{ env.STRAPI_APP }}
           WEB_APP: ${{ env.WEB_APP }}
