--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Test SSH connection
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -39,6 +40,7 @@ jobs:
           port: 22
           script: |
             echo "SSH connection successful"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -66,8 +68,18 @@ jobs:
             echo "DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME_DEV }}" >> $GITHUB_ENV
             echo "DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD_DEV }}" >> $GITHUB_ENV
           fi
-      - name: Debug SSH key
-        run: echo "${{ secrets.AWS_SSH_PRIVATE_KEY }}"
+
+      - name: Verify environment variables
+        run: |
+          echo "STRAPI_APP=${{ env.STRAPI_APP }}"
+          echo "WEB_APP=${{ env.WEB_APP }}"
+          echo "ENV=${{ env.ENV }}"
+          echo "NODE_ENV=${{ env.NODE_ENV }}"
+          echo "DEPLOY_FILE=${{ env.DEPLOY_FILE }}"
+          echo "DATABASE_NAME=${{ env.DATABASE_NAME }}"
+          echo "DATABASE_USERNAME=${{ env.DATABASE_USERNAME }}"
+          echo "DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }}"
+
       - name: Copy Docker Compose file to EC2
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -86,15 +98,14 @@ jobs:
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd /home/${{ secrets.AWS_SSH_USER }}/deploy/deployment/${{env.NODE_ENV}}/
+            cd /home/${{ secrets.AWS_SSH_USER }}/deploy/deployment/${{ env.NODE_ENV }}/
+            export STRAPI_APP=${{ env.STRAPI_APP }}
+            export WEB_APP=${{ env.WEB_APP }}
+            export NODE_ENV=${{ env.NODE_ENV }}
+            export DATABASE_NAME=${{ env.DATABASE_NAME }}
+            export DATABASE_USERNAME=${{ env.DATABASE_USERNAME }}
+            export DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }}
             docker-compose -f deploy.yml up -d
-        env:
-          STRAPI_APP: ${{ env.STRAPI_APP }}
-          WEB_APP: ${{ env.WEB_APP }}
-          NODE_ENV: ${{ env.NODE_ENV }}
-          DATABASE_NAME: ${{ env.DATABASE_NAME }}
-          DATABASE_USERNAME: ${{ env.DATABASE_USERNAME }}
-          DATABASE_PASSWORD: ${{ env.DATABASE_PASSWORD }}
 
       - name: Clean up
         run: docker system prune -f
