feat: removed old containers

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-STRAPI_APP=your_strapi_app_version
-WEB_APP=your_web_app_version
+STRAPI_APP=9060ff8
+WEB_APP=3159d84
 NODE_ENV=development
 DATABASE_NAME=strapi_dev
 DATABASE_USERNAME=admin_dev
