--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,11 @@ jobs:
 
     steps:
       - name: Checkout code
+        if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v2
 
       - name: Test SSH connection
+        if: github.event_name == 'workflow_dispatch'
         uses: appleboy/ssh-action@v0.1.5
         with:
           host: ${{ secrets.AWS_SSH_HOST }}
@@ -42,15 +44,18 @@ jobs:
             echo "SSH connection successful"
 
       - name: Set up Docker Buildx
+        if: github.event_name == 'workflow_dispatch'
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
+        if: github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set environment variables
+        if: github.event_name == 'workflow_dispatch'
         run: |
           echo "STRAPI_APP=${{ github.event.inputs.STRAPI_APP }}" >> $GITHUB_ENV
           echo "WEB_APP=${{ github.event.inputs.WEB_APP }}" >> $GITHUB_ENV
@@ -70,6 +75,7 @@ jobs:
           fi
 
       - name: Verify environment variables
+        if: github.event_name == 'workflow_dispatch'
         run: |
           echo "STRAPI_APP=${{ env.STRAPI_APP }}"
           echo "WEB_APP=${{ env.WEB_APP }}"
@@ -81,6 +87,7 @@ jobs:
           echo "DATABASE_PASSWORD=${{ env.DATABASE_PASSWORD }}"
 
       - name: Copy Docker Compose file to EC2
+        if: github.event_name == 'workflow_dispatch'
         uses: appleboy/scp-action@v0.1.3
         with:
           source: ${{ env.DEPLOY_FILE }}
@@ -89,7 +96,9 @@ jobs:
           username: ${{ secrets.AWS_SSH_USER }}
           key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
           port: 22
+
       - name: Deploy with Docker Compose on EC2
+        if: github.event_name == 'workflow_dispatch'
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.AWS_SSH_HOST }}
@@ -108,4 +117,5 @@ jobs:
             docker-compose -f deploy.yml up -d
 
       - name: Clean up
+        if: github.event_name == 'workflow_dispatch'
         run: docker system prune -f
