fix: added -f to avoid confirmation console

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,4 +118,4 @@ jobs:
 
       - name: Clean up
         if: github.event_name == 'workflow_dispatch'
-        run: docker system prune -f && docker image prune -a
+        run: docker system prune -f && docker image prune -a -f
